force-app/main/default/objects/Parts__x/Parts__x.object-meta.xml
<CustomObject>
    <description>Parts</description>
    <externalDataSource>SAP</externalDataSource>
    <externalName>Parts</externalName>
    <label>SAP Part</label>
    <pluralLabel>SAP Parts</pluralLabel>
</CustomObject>