force-app/main/default/objects/Parts__x/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category</description>
    <externalDeveloperName>Category</externalDeveloperName>
    <label>Category</label>
    <length>128</length>
    <type>Text</type>
</CustomField>