force-app/main/default/objects/Parts__x/fields/Partid__c.field-meta.xml
<CustomField>
    <fullName>Partid__c</fullName>
    <description>Partid</description>
    <externalDeveloperName>Partid</externalDeveloperName>
    <label>Part ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>