force-app/main/default/objects/Parts__x/fields/Partnumber__c.field-meta.xml
<CustomField>
    <fullName>Partnumber__c</fullName>
    <description>Partnumber</description>
    <externalDeveloperName>Partnumber</externalDeveloperName>
    <label>Part Number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>