force-app/main/default/objects/Parts__x/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <description>Supplier</description>
    <externalDeveloperName>Supplier</externalDeveloperName>
    <label>Supplier</label>
    <length>128</length>
    <type>Text</type>
</CustomField>